Added new logos

--- a/WEBAPP/src/main/resources/WEB/google-homepage.html
+++ b/WEBAPP/src/main/resources/WEB/google-homepage.html
@@ -1,28 +1,38 @@
+
+
 <!DOCTYPE html>
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
-		<title>Google</title>
+		<link rel="shortcut icon" type="image/png" href="Images/logo.png"/>
+		 <meta charset="UTF-8">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+		
+
+		<title>Aether</title>
 	</head>
 	<body>
 		<header>
-			<a href="https://plus.google.com/u/0/up/follow">+Lara</a>
 			<a href="https://mail.google.com">Gmail</a>
 			<a href="https://www.google.com/imghp?hl=en&tab=wi&ei=Ox1NVMXuJYO3yATCjoFA&ved=0CAQQqi4oAg">Images</a>
 			<img id="products" src="products.png"/>
 			<img id="bell" src="bell.png"/>
 			<img id="share" src="share.png"/>
-			<img id="lara" class="headerpics" src="http://lh3.googleusercontent.com/-zkPWifjxy1M/AAAAAAAAAAI/AAAAAAAAAAA/7pAALFnncq4/s32-c/photo.jpg"/>
 		</header>
 		<div>
-			<img src="https://www.google.com/images/srpr/logo11w.png"/>
+			<img src="Images/logo7.png"/>
 			<form name="google" action="#" method="POST"><br>
-				<input type="search" class="search"><br>
-				<input type="submit" class="button" name="submit" value="Google Search">
-				<input type="submit" class="button" name="lucky" value="I'm Feeling Lucky">
+					<div class="searchbar">
+					<input class="search_input" type="text" name="" placeholder="Search...">
+					<a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+					</div>
+				
 			</form>
 		</div>
+		
+
 		<footer>
 			<a class="leftlinks" href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a>
 			<a class="leftlinks" href="https://www.google.com/services/?fg=1">Business</a>
