--- a/WEBAPP/src/main/resources/WEB/index.html
+++ b/WEBAPP/src/main/resources/WEB/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="shortcut icon" type="image/png" href="Images/icon2.png"/>
-		 <meta charset="UTF-8">
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -13,13 +13,31 @@
 
 		<title>Aether</title>
 	</head>
-
 	<script>
+
+	//document.getElementById("result").innerHTML = localStorage.getItem("lastname");
+
+		/*document.getElementById("result").innerHTML = localStorage.lastname;
+
+		if (localStorage.colInd) {
+			localStorage.colInd = Number(localStorage.clickcount) + 1;
+		} else {
+			localStorage.clickcount = 1;*/
+
+
+		var colorIndex = localStorage.getItem("colInd");
+
 		var colors = ["#383838","white"];
 		var logos = ["Images/logo9.png","Images/logo7.png"]
 		var botonLabel = ["Ligth Mode","Dark Mode"]
-		var colorIndex = 0;
+		var icons = ["Images/bell2.png","Images/products2.png","Images/share2.png","Images/bell.png","Images/products.png","Images/share.png"]
+		
+
 		function changeColor() {
+			colorIndex++;
+
+			if (colorIndex == null) colorIndex = 0;
+			console.log(colorIndex);
 			if( colorIndex >= colors.length ) {
 				colorIndex = 0;
 			}
@@ -27,9 +45,30 @@
 			document.getElementById("search").style.backgroundColor = colors[colorIndex];
 			document.getElementById("imgLogo").src = logos[colorIndex];
 			document.getElementById("btnColor").innerText = botonLabel[colorIndex];
+			document.getElementById("bell").src = icons[3*colorIndex];
+			document.getElementById("products").src = icons[1+3*colorIndex];
+			document.getElementById("share").src = icons[2+3*colorIndex];
 
-			colorIndex++;
+
+			localStorage.setItem("colInd", colorIndex);
 		}
+
+		function loadColor() {
+			if (colorIndex == null) colorIndex = 0;
+			if( colorIndex >= colors.length ) {
+				colorIndex = 0;
+			}
+			document.getElementById("body").style.backgroundColor = colors[colorIndex];
+			document.getElementById("search").style.backgroundColor = colors[colorIndex];
+			document.getElementById("imgLogo").src = logos[colorIndex];
+			document.getElementById("btnColor").innerText = botonLabel[colorIndex];
+			document.getElementById("bell").src = icons[3*colorIndex];
+			document.getElementById("products").src = icons[1+3*colorIndex];
+			document.getElementById("share").src = icons[2+3*colorIndex];
+		}
+
+
+		
 	</script>
 	<header>
 		<img id="bell" src="Images/bell.png"/>
@@ -37,8 +76,8 @@
 		<img id="products" src="Images/products.png"/>
 		<button id="btnColor" class="btnCol" onclick="changeColor();">Dark Mode</button>
 
-		 
 
+		
 
 
 	</header>
@@ -59,13 +98,6 @@
 			</form>
 		</div>
 
-
-
-
-
-
-		
-
 		<footer>
 			<a class="leftlinks" href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a>
 			<a class="leftlinks" href="https://www.google.com/services/?fg=1">Business</a>
@@ -74,5 +106,8 @@
 			<a class="rightlinks" href="https://www.google.com/intl/en/policies/?fg=1">Privacy & Terms</a>
 		</footer>
 	</body>
+
+	<script>loadColor();</script>
+
 </html>
 
