--- a/WEBAPP/src/main/resources/WEB/search_results.html
+++ b/WEBAPP/src/main/resources/WEB/search_results.html
@@ -15,16 +15,6 @@
 	</head>
 	<script>
 
-	//document.getElementById("result").innerHTML = localStorage.getItem("lastname");
-
-		/*document.getElementById("result").innerHTML = localStorage.lastname;
-
-		if (localStorage.colInd) {
-			localStorage.colInd = Number(localStorage.clickcount) + 1;
-		} else {
-			localStorage.clickcount = 1;*/
-
-
 		var colorIndex = localStorage.getItem("colInd");
 
 		var colors = ["#383838","white"];
@@ -32,7 +22,6 @@
 		var botonLabel = ["Ligth Mode","Dark Mode"]
 		var icons = ["Images/bell2.png","Images/products2.png","Images/share2.png","Images/bell.png","Images/products.png","Images/share.png"]
 		
-
 		function changeColor(increaseIndex) {
 			if(increaseIndex) colorIndex++;
 			if (colorIndex == null) colorIndex = 0;
@@ -40,7 +29,7 @@
 			
 			document.getElementById("body").style.backgroundColor = colors[colorIndex];
 			document.getElementById("search").style.backgroundColor = colors[colorIndex];
-			document.getElementById("imgLogo").src = logos[colorIndex];
+			document.getElementById("imgLogo_2").src = logos[colorIndex];
 			document.getElementById("btnColor").innerText = botonLabel[colorIndex];
 			document.getElementById("bell").src = icons[3*colorIndex];
 			document.getElementById("products").src = icons[1+3*colorIndex];
@@ -53,7 +42,6 @@
 			changeColor(false);
 		}
 
-
 	</script>
 	<header>
 		<img id="bell" src="Images/bell.png"/>
@@ -63,14 +51,13 @@
 	</header>
 
 
-    <body id='body'>
-
-		<div id = "search">
-			<img id="imgLogo" src="Images/logo7.png"/>
-			<form name="google" action="#" method="POST"><br>
-					<div class="searchbar">
-					<input class="search_input" type="text" name="" placeholder="Search...">
-					<a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+    <body id='body_2'>
+		<div id = "search_2">
+			<img id="imgLogo_2" src="Images/logo7.png"/>
+			<form name="aether" action="#" method="POST"><br>
+					<div class="searchbar_2">
+						<input class="search_input" type="text" name="" placeholder="Search...">
+						<a href="#" class="search_icon"><i class="fas fa-search"></i></a>
 					</div>
 				
 			</form>
