Added support to add websites from JFrame and added support for private URLs

--- a/WEBSITES/0/index.html
+++ b/WEBSITES/0/index.html
@@ -41,7 +41,7 @@
         </div>
         <q>
           Como usted lo vio en
-          <a href="../El blog del Perro/index.html"
+          <a href="https://vigorous-brown-3ef42f.netlify.com"
             >http://elblogdelperro.com</a
           >
         </q>
