--- a/WEBSITES/1/index.html
+++ b/WEBSITES/1/index.html
@@ -33,17 +33,18 @@
           <ol>
             <li>
               Comida canina
-              <a href="../Comida canina/index.html">https://comidacanina.com</a>
+              <a href="https://stupefied-boyd-966634.netlify.com/">
+                https://comidacanina.com</a>
             </li>
             <li>
               El rincón del guauf
-              <a href="../El rincón de Guauf/index.html"
+              <a href="https://hungry-babbage-be1a2b.netlify.com"
                 >https://elrincondelguauf.com</a
               >
             </li>
             <li>
               No entrar
-              <a href="../Perros locos/index.html"
+              <a href="https://sharp-mcnulty-798054.netlify.com"
                 >https://perroslocos.onion.g786sfccs</a
               >
             </li>
