--- a/WEBSITES/2/index.html
+++ b/WEBSITES/2/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<title> Titulo de la pagina de perros </title><head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Perros,perros limpios, el blog del perro, el rincón del perro, perros flacos, perros occisos, perros muertos, noticias sobre perros, perros, perruno" />
-    <meta name="description" content="Lo mejor de las noticias matutinas, entérate del chisme en la ciudad, vive, disfruta. Conéctate con tu comunidad a través del blog del perro." />
+    <meta
+      name="keywords"
+      content="perros, diseño, interiores, diseño de interiores, cocina, sala, comedor, firulais"
+    />
+    <meta
+      name="description"
+      content="En el rincón de Guauf encontrarás los mejores tips para el diseño de interiores dentro de tu hogar, visitanos en Plaza Patria."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <style>
-        body {
-            background: rgb(80, 67, 67);
-            color: white;
-            font-family: 'Times New Roman', Times, serif;
-        }
-        
-        a {
-            color: lightpink;
-        }
+      body {
+        background: lightgoldenrodyellow;
+        color: black;
+        font-family: Arial, Helvetica, sans-serif;
+      }
     </style>
-    <title></title>
-</head>
-
-<body>
+    <title>El rincon de Guauf</title>
+  </head>
+  <body>
     <div>
-        <h1>Perros enkuerados</h1>
-        <section>
-            <div>
-                <p>Mira lo que los perros no quieren que veas</p>
-                <ol>
-                    <li>
-                        <a href="../Comida canina/index.html">https://comida.net</a
-              >
-            </li>
-            <li>
-              <a href="../El rincón de Guauf/index.html">https://rincondelguauf.com</a>
-                    </li>
-                    <li>
-                        <a href="../Perros locos/index.html">https://perroslocos.com</a>
-                    </li>
-                </ol>
-            </div>
-        </section>
+      <h1>Design your House by Firulais</h1>
+      <section>
+        <div>
+          <p>Lo mejor para la casa de tu perro</p>
+          <a href="https://stupefied-boyd-966634.netlify.com/">LA MEJOR COMIDA AQUÍ</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+            quisquam excepturi quod ad porro? Rem excepturi minima amet
+            architecto tenetur consectetur, voluptas facere a velit, enim
+            deserunt ipsam! Perferendis, dolore?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam qui,
+            corporis quo accusantium voluptas quidem quas earum labore odit est
+            maxime excepturi eos rem assumenda, dolor numquam, impedit facilis.
+            Ea?
+          </p>
+        </div>
+      </section>
     </div>
-</body>
-
+  </body>
 </html>
